# prr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: arbiter.md  claude-reviewer.md  codex-reviewer.md  gemini-reviewer.md  opencode-reviewer.md
config/prompts/: arbiter.md.erb  arbiter_question.md.erb  review.md.erb
docs/design/: prr-design.md
docs/superpowers/plans/: 2026-04-04-prr-implementation.md  2026-05-23-trigger-based-findings.md
docs/superpowers/specs/: 2026-04-04-prr-design.md  2026-04-13-edit-review-body-design.md  2026-05-21-trigger-based-findings-design.md
lib/prr/: agent_runner.rb  arbiter.rb  cli.rb  config.rb  github_commenter.rb  preflight.rb  progress.rb  prompt_builder.rb  report.rb  review_runner.rb  sandbox.rb  setup.rb  ticket_fetcher.rb
references/: report-format.md
references/prompts/: arbiter-prompt.md  arbiter-question-prompt.md  review-prompt.md
scripts/: build-universal.sh
skills/prr-add-agent/: SKILL.md
skills/prr-cleanup/: SKILL.md
skills/prr-delete-agent/: SKILL.md
skills/prr-setup/: SKILL.md
skills/prr-start/: SKILL.md
src/: cleanup.rs  config.rs  context.rs  git.rs  html.rs  jira.rs  main.rs  pr.rs  prompt.rs  report.rs  workspace.rs
