[package]
name = "prr"
version = "0.4.1"
edition = "2021"
description = "AI-powered PR review — Rust binary for the PRR Claude Code plugin"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
base64 = "0.22"
html2text = "0.12"
shellexpand = "3"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
